include/wx/osx/core/cfstring.h
@@ -74,6 +74,7 @@ public:
     static wxString AsStringWithNormalizationFormC( CFStringRef ref, wxFontEncoding encoding = wxFONTENCODING_DEFAULT ) ;
 #if wxOSX_USE_COCOA_OR_IPHONE
     static wxString AsString( NSString* ref, wxFontEncoding encoding = wxFONTENCODING_DEFAULT ) ;
+    static wxString AsStringWithNormalizationFormC( NSString* ref, wxFontEncoding encoding = wxFONTENCODING_DEFAULT ) ;
 #endif
 
 #if wxOSX_USE_COCOA_OR_IPHONE
